dlf-web-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: dlf
  namespace: default
spec:
  ports:
  - port: 8090
    protocol: TCP
    targetPort: 8090
  selector:
    run: dlf
  type: NodePort
