dlf-fanout-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: dlf-fanout-ingress
spec:
  rules:
  - host: johncollins.ai
    http:
      paths:
      - path: /*
        pathType: ImplementationSpecific
        backend:
          service:
            name: web
            port:
              number: 8080
      - path: /deep-learning-finance
        pathType: ImplementationSpecific
        backend:
          service:
            name: dlf
            port:
              number: 8081
